[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-timeout"
version = "0.1.1-2"
description = "Configurable timeout middleware for FastAPI applications"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Zuhair Abdulla", email = "zuhairamahdi@gmail.com"}
]
keywords = ["fastapi", "timeout", "middleware", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.65.0",
    "starlette>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.23.0",
    "uvicorn>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/zuhairamahdi/fastapi-timeout"
Documentation = "https://github.com/zuhairamahdi/fastapi-timeout#readme"
Repository = "https://github.com/zuhairamahdi/fastapi-timeout"
"Bug Tracker" = "https://github.com/zuhairamahdi/fastapi-timeout/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_timeout*"]

[tool.setuptools.package-data]
fastapi_timeout = ["py.typed"]
